@@ -9,5 +9,5 @@ classes/soot/baf/toolkits/base/peephole.dat: src/soot/baf/toolkits/base/peephole
 
 foo: classes/soot/jimple/parser/parser/parser.dat classes/soot/jimple/parser/lexer/lexer.dat classes/soot/baf/toolkits/base/peephole.dat
 
-JC=jikes -d classes
+JC=javac -d classes
 
